<!--
  ~ /*
  ~  * Copyright (C) 2018 The Android Open Source Project
  ~  *
  ~  * Licensed under the Apache License, Version 2.0 (the "License");
  ~  * you may not use this file except in compliance with the License.
  ~  * You may obtain a copy of the License at
  ~  *
  ~  *      http://www.apache.org/licenses/LICENSE-2.0
  ~  *
  ~  * Unless required by applicable law or agreed to in writing, software
  ~  * distributed under the License is distributed on an "AS IS" BASIS,
  ~  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  * See the License for the specific language governing permissions and
  ~  * limitations under the License.
  ~  */
  -->

<resources>
    <string name="app_name">WorkManager Demo</string>
    <string name="select_stock_image">Select Stock Image</string>
    <string name="select_image">Select Image</string>
    <!-- filters -->
    <string name="filters_title">Choose Filters</string>
    <string name="filter_watercolor">Watercolor</string>
    <string name="filter_grayscale">Grayscale</string>
    <string name="filter_blur">Blur</string>
    <!-- destinations -->
    <string name="destinations_title">Destination</string>
    <string name="destination_save">Save Image</string>
    <string name="destination_upload">Upload to Imgur</string>
    <!-- actions -->
    <string name="go">Go</string>
    <string name="cancel">Cancel</string>
    <string name="output">Output</string>
    <!-- content descriptions -->
    <string name="description_image">The image to filter and upload.</string>
    <!-- messages -->
    <string name="set_permissions_in_settings">
        Go to Settings -> Apps and Notifications -> WorkManager Demo -> App Permissions
        and grant access to Storage.
    </string>
    <string name="credits">
        <![CDATA[Stock Photos by <a href="https://www.flickr.com/photos/romainguy">Romain Guy</a>.
        CC2 License.]]>
    </string>
</resources>
