<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2018 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:contentDescription="@string/description_image"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="100"
        app:layout_constraintHeight_percent="50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/filters_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filters_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toStartOf="@id/destinations_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <CheckBox
        android:id="@+id/filter_grayscale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_grayscale"
        app:layout_constraintStart_toStartOf="@+id/filter_watercolor"
        app:layout_constraintTop_toBottomOf="@id/filter_watercolor" />

    <CheckBox
        android:id="@+id/filter_blur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_blur"
        app:layout_constraintStart_toStartOf="@+id/filter_grayscale"
        app:layout_constraintTop_toBottomOf="@id/filter_grayscale" />

    <CheckBox
        android:id="@+id/filter_watercolor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_watercolor"
        app:layout_constraintStart_toStartOf="@+id/filters_title"
        app:layout_constraintTop_toBottomOf="@id/filters_title" />


    <TextView
        android:id="@+id/destinations_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/destinations_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/filters_title"
        app:layout_constraintTop_toTopOf="@id/filters_title" />

    <RadioGroup
        android:id="@+id/destinations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@id/destinations_title"
        app:layout_constraintTop_toBottomOf="@id/destinations_title">

        <RadioButton
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/destination_save" />

        <RadioButton
            android:id="@+id/upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destination_upload" />
    </RadioGroup>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/destinations_group"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="destinations_title,destinations" />

    <Button
        android:id="@+id/apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/destinations" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/apply"
        app:layout_constraintTop_toBottomOf="@+id/destinations"
        tools:visibility="visible" />

    <Button
        android:id="@+id/output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/output"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/apply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent  "
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="@id/imageView"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintTop_toTopOf="@id/imageView"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>
